# leptos-helios

./: .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  API_CONTRACT_ANALYSIS.md  API_CONTRACT_TESTING_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON_RECHARTS_v3.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEMO_RELEASE_SUMMARY.md  DISCLAIMER.md  DOCUMENTATION.md  Dockerfile  FILE_SIZE_REFACTORING_SUMMARY.md  FINAL_FIXES_SUMMARY.md  IMMEDIATE_FIXES_COMPLETED.md  INFINITE_LOOP_AUDIT.md  LARGE_FILES_REFACTORING_PLAN.md  LEPTOS_MOTION_WASM_SIGNALS_GUIDE.md  Makefile  NEXT_ROADMAP_UPDATE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE4_DEVELOPMENT_SUMMARY.md  PLUGIN_ARCHITECTURE_SUMMARY.md  QUICK_START_XYFLOW.md  README.md  REALTIME_COLLABORATIVE_TDD_PLAN.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v0.8.0.md  RELEASE_SUMMARY_v0.8.1.md  RELEASE_v0.3.0-playwright-pnpm.md  RELEASE_v0.7.0-testing-pyramid.md  REMEDIATION_PLAN.md  RUST_WASM_CLEANUP_SUMMARY.md  (+62 more)
helios-app/: Cargo.toml  Trunk.toml  index.html  visualization.html
helios-app/src/: lib.rs
helios-benchmarks/: Cargo.toml
helios-benchmarks/src/: lib.rs
helios-core/: Cargo.toml
helios-core/src/: accessibility.rs  advanced_analytics.rs  advanced_chart_types.rs  advanced_charts.rs  advanced_graph_features.rs  advanced_memory.rs  algorithm_registry.rs  animation_engine.rs  anomaly_detection.rs  canvas2d_renderer.rs  canvas_surface.rs  chart.rs  chart_config.rs  cross_browser.rs  custom_components.rs  data.rs  data_minimal.rs  data_pipeline.rs  data_simple.rs  data_sources.rs  debugger.rs  dev_server.rs  dev_tools.rs  export_system.rs  forecasting_engine.rs  gpu.rs  gpu_accelerator.rs  headless_renderer.rs  helios_chart.rs  intelligence.rs  interactions.rs  interactivity.rs  lib.rs  line_chart_renderer.rs  ml_intelligence.rs  nl_processor.rs  performance.rs  performance_optimizations.rs  plugin_system.rs  production.rs  (+14 more)
helios-core/src/accessibility/: alt_text.rs  errors.rs  keyboard.rs  mod.rs  performance.rs  screen_reader.rs  wcag.rs
helios-core/src/advanced_analytics/: correlation.rs  ml_models.rs  mod.rs  statistical_analysis.rs  time_series.rs  types.rs
helios-core/src/chart/: builder.rs  mod.rs  rendering.rs  specification.rs  types.rs  validation.rs
helios-core/src/data_processing/: errors.rs  mod.rs  strategies.rs  types.rs
helios-core/src/data_sources/: database.rs  errors.rs  mod.rs  traits.rs  types.rs
helios-core/src/export_system/: file_writer.rs  mod.rs  template_engine.rs  types.rs
helios-core/src/graph_features/: algorithms.rs  analysis.rs  clustering.rs  layouts.rs  mod.rs  visualization.rs
helios-core/src/intelligence/: anomaly_detection.rs  clustering.rs  ml_pipeline.rs  mod.rs  time_series.rs
helios-core/src/nl_processor/: data_analyzer.rs  intelligence_extractor.rs  mod.rs  query_parser.rs  types.rs
helios-core/src/offline_support/: cache_management.rs  mod.rs  offline_storage.rs  pwa_features.rs  service_worker.rs  sync_management.rs
helios-core/src/performance/: algorithmic_optimizations.rs  memory_optimizations.rs  mod.rs  runtime_optimizations.rs
helios-core/src/performance_advanced/: algorithmic_optimizations.rs  memory_optimizations.rs  mod.rs
helios-core/src/performance_optimization/: data_streaming.rs  memory_pools.rs  mobile_gpu.rs  mod.rs  rendering_pipeline.rs
helios-core/src/realtime/: collaborative_editing.rs  conflict_resolution.rs  live_updates.rs  message_protocol.rs  mod.rs  touch_interactions.rs  websocket_connection.rs
helios-core/src/rendering/: errors.rs  mod.rs  performance.rs  renderer.rs  webgpu_device.rs
helios-core/src/responsive/: adaptive_sizing.rs  breakpoints.rs  data_visualization.rs  layout.rs  mod.rs  navigation.rs  typography.rs
helios-core/src/security/: auth.rs  authorization.rs  errors.rs  manager.rs  mod.rs  types.rs
helios-core/src/shaders/: area.wgsl  bar.wgsl  bar_fragment.wgsl  boxplot.wgsl  composite.wgsl  contour.wgsl  density.wgsl  heatmap.wgsl  histogram.wgsl  line.wgsl  line_fragment.wgsl  point.wgsl  radar.wgsl  rect.wgsl  sankey.wgsl  scatter.wgsl  scatter_fragment.wgsl  text.wgsl  treemap.wgsl  violin.wgsl
helios-core/src/streaming/: buffer.rs  cache.rs  data_processor.rs  mod.rs  quality.rs  stream_manager.rs  synchronization.rs  transformation.rs  types.rs  websocket.rs
helios-core/src/styling/: mod.rs
helios-core/src/webgpu_renderer/: buffer_pool.rs  device_manager.rs  (+3 more)
helios-core/tests/: additional_chart_types.rs  advanced_analytics_tests.rs  advanced_charts.rs  advanced_graph_features_tdd.rs  browser_build_integration.rs  build_pipeline.rs  chart_rendering.rs  chart_validation.rs  ci_cd_pipeline.rs  data_processing.rs  dev_environment.rs  enhanced_interactive_features.rs  enhanced_styling.rs  fallback_implementation.rs  final_validation.rs  helios_chart_component.rs  integration_tests.rs  ml_intelligence_standalone.rs  performance_optimization.rs  performance_optimizations_tdd.rs  performance_tests.rs  production_readiness.rs  real_browser_canvas_integration.rs  smoke_tests.rs  streaming.rs  tdd_phase1_foundation.proptest-regressions  tdd_phase1_foundation.rs  tdd_phase2_gpu_acceleration.rs  tdd_phase2_gpu_optimization.rs  tdd_phase2_memory_management.rs  tdd_phase2_performance.proptest-regressions  tdd_phase2_production_readiness.rs  tdd_phase2_wasm_optimization.rs  tdd_phase3_intelligence.rs  tdd_phase3_ml_intelligence.rs  tdd_phase4_audit_logging.rs  tdd_phase4_data_governance.rs  tdd_phase4_enterprise_security.rs  tdd_phase4_plugin_architecture.rs  trunk_build_integration.rs  (+7 more)
helios-examples/: Cargo.toml
helios-examples/src/: basic_charts.rs  dashboard.rs  lib.rs  simple_examples.rs  stylish_demo.rs
helios-leptos/: Cargo.toml
helios-leptos/src/: components.rs  lib.rs
helios-leptos/tests/: simple_components.rs
helios-macros/: Cargo.toml
helios-macros/src/: lib.rs
helios-wasm/: Cargo.toml
helios-wasm-core/: Cargo.toml  test.html
helios-wasm-core/src/: lib.rs  main.rs
helios-wasm/src/: lib.rs
(+183 files in other folders)
