[workspace]
members = [
    "helios-core",  # Published as leptos-helios
    "helios-leptos",  # Published as leptos-helios-components
    "helios-macros",  # Published as leptos-helios-macros
    "helios-wasm",  # Published as leptos-helios-wasm
    "helios-wasm-core",  # Published as leptos-helios-wasm-core
    "helios-examples",  # Published as leptos-helios-examples
    "helios-benchmarks",  # Published as leptos-helios-benchmarks
    "helios-app"  # Published as leptos-helios-app
]

resolver = "2"

[workspace.dependencies]
# Core dependencies
leptos = { version = "0.8", features = ["csr", "ssr", "hydrate"] }
wgpu = { version = "25", features = ["webgl"] }
polars = { version = "0.50", features = ["lazy"] }
datafusion = { version = "43" }
candle-core = { version = "0.8" }

# Web and WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Async and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["wasm-bindgen"] }
rand = "0.8"

# Development & Testing
criterion = "0.5"
wasm-bindgen-test = "0.3"

# Enhanced TDD Testing Framework
proptest = "1.4"              # Property-based testing
mockall = "0.12"              # Mocking framework
rstest = "0.21"               # Parameterized tests
serial_test = "3.1"           # Test isolation
test-log = "0.2"              # Test logging
fake = "2.9"                  # Test data generation
quickcheck = "1.0"            # QuickCheck property testing

# Quality & Coverage Tools
tarpaulin = "0.31"           # Code coverage measurement
cargo-mutants = "24.11"      # Mutation testing

[workspace.package]
version = "0.3.0-beta.1"
edition = "2021"
authors = ["CloudShuttle <contact@cloudshuttle.com>"]
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-helios"
documentation = "https://docs.rs/leptos-helios"
description = "High-performance Rust visualization library for Leptos v0.8"
keywords = ["visualization", "charts", "rust", "leptos", "webgpu"]
categories = ["visualization", "web-programming"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"
