[package]
name = "leptos-helios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core visualization engine for Helios"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
wgpu = { workspace = true }
polars = { workspace = true }
datafusion = { workspace = true }
candle-core = { workspace = true }
leptos = { workspace = true }
log = "0.4"

# Web and WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

# Async and networking
tokio = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
num_cpus = "1.0"
bytemuck = "1.14"

# Performance optimization
rayon = "1.8"
bincode = "1.3"

# Testing
tempfile = "3.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.features]
default = ["webgpu"]

[features]
default = ["webgpu", "async"]
webgpu = []
webgl2 = []
canvas2d = []
simd = []
debug = []
ml = []
async = ["tokio"]

[[example]]
name = "webgpu_demo"
path = "examples/webgpu_demo.rs"
