[package]
name = "leptos-helios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/leptos-helios"
description = "High-performance Rust visualization library with Canvas2D, WebGPU, and WebAssembly support"
keywords = ["visualization", "charts", "webgpu", "canvas2d", "wasm"]
categories = ["visualization", "web-programming", "graphics"]

[dependencies]
# Core dependencies
wgpu = { workspace = true }
polars = { workspace = true }
datafusion = { workspace = true }
candle-core = { workspace = true }
leptos = { workspace = true }
log = "0.4"

# Web and WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

# Async and networking
tokio = { workspace = true, optional = true }
async-trait = "0.1"

# Database connectivity
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }
clickhouse = { version = "0.11", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = "0.4"
num_cpus = "1.0"
bytemuck = "1.14"
base64 = "0.22"

# Styling
tailwind-rs-core = "0.6.1"
urlencoding = "2.1"
flate2 = "1.0"

# Performance optimization
rayon = "1.8"
bincode = "1.3"

# Testing
tempfile = "3.8"
wasm-bindgen-test = "0.3"

[dev-dependencies]
# TDD and testing frameworks
proptest = "1.4"
mockall = "0.13"
rstest = "0.20"
serial_test = "3.1"
test-log = "0.2"
fake = "4.4"
quickcheck = "1.0"
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }


[features]
default = ["webgpu", "async"]
webgpu = []
webgl2 = []
canvas2d = []
simd = []
debug = []
ml = []
async = ["tokio"]
database = ["sqlx", "clickhouse"]

[[example]]
name = "webgpu_demo"
path = "examples/webgpu_demo.rs"
