[package]
name = "helios-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Example applications for Helios"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
helios-core = { path = "../helios-core" }
helios-leptos = { path = "../helios-leptos" }
helios-macros = { path = "../helios-macros" }
leptos = { workspace = true }
# polars = { version = "0.50", features = ["lazy"] }

# Web and WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
