[package]
name = "leptos-helios-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Leptos integration for Helios"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
leptos-helios = { version = "0.8.0", path = "../helios-core" }
leptos = { workspace = true }

# Web and WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }

# Data processing
polars = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["csr"]
csr = []
ssr = []
hydrate = []
