[package]
name = "leptos-helios-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Helios"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
# Core dependencies
leptos-helios = { version = "0.8.1", path = "../helios-core" }

# Macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
