[package]
name = "leptos-helios-wasm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-compatible core for Helios (minimal dependencies)"
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "helios-wasm"
path = "src/main.rs"

[dependencies]
# Web and WASM
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
js-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["js"] }
bytemuck = "1.14"
console_error_panic_hook = { workspace = true }

# WebGPU (WASM-compatible)
wgpu = { workspace = true }

[features]
default = ["webgpu"]
webgpu = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
