[package]
name = "leptos-helios-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for Helios"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies - minimal for WASM
leptos-helios = { version = "0.8.1", path = "../helios-core", default-features = false, features = ["webgpu", "async"] }

# Web and WASM
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
